# resonate

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
resonate/: ResonateApp.py  ResonatePipeline.py  ResonateWindow.py  __main__.py
resonate/models/: ResonateResult.py  ResonateSegment.py  ResonateTiming.py
resonate/preprocess/: SileroDenoiser.py
resonate/stt/: TransformersWhisper.py
resonate/utils/: audio_utils.py  os_utils.py  output_utils.py  time_utils.py  torch_utils.py
resonate/vad/: SileroVAD.py
